# dreamstream

./: .gitignore  LICENSE  README.md  playground_onnx.py  playground_onnx_inputs.py  playground_onnx_vs_compile.py  playground_state_transfer.py  playground_tensor_subclassing.py  playground_torch_dispatch.py  playground_torch_dispatch_v2.py  pyproject.toml  requirements.txt  test_dispatch.py  test_onnx.py  test_tensor_subclass.py  test_tensor_subclass_2.py  test_torch_script_behaviour.py  test_torch_script_behaviour_2.py  test_torch_script_behaviour_3.py  test_trace.py
.github/workflows/: ci.yml  python-app.yml
doc_scrape/: pointwise-ops.py  reduction-ops.py
doc_scrape/lists/: default-valid-pointwise-ops-2023_06_09-10_06_02.txt  default-valid-pointwise-ops-2023_06_19-16_13_42.txt  inplace-recouple-pointwise-ops-2023_06_19-16_13_42.txt  recouple-pointwise-ops-2023_06_19-16_13_42.txt  valid-pointwise-ops-2023_06_09-10_06_02.txt  valid-pointwise-ops-2023_06_19-16_13_42.txt
dreamstream/: __init__.py  data_objects.py  exceptions.py  func_coverage.py  overrides.py  random.py  stream_dataset.py  stream_tensor.py  tensor.py  warnings.py  wrappers.py
dreamstream/data/: __init__.py  data_objects.py  stream_dataset.py  stream_dataset_demo.py  stream_tensor.py
dreamstream/nn/: conv1d.py
dreamstream/patches/: __init__.py  conv.py  general.py  modes.py  rnn.py
dreamstream/tests/: conv1d_test.py  test.pkl  test_conv1d.py  test_conv1d_2.py  test_conv1d_mixed_batch.py  (+1 more)
examples/: wav2letter.py
tests/: conftest.py  test_stream_metadata.py  test_tensor.py
(+12 files in other folders)
